# C2S-Sat2

stm32f3-c2s/: .gitignore  Cargo.toml  openocd.gdb
stm32f3-c2s/.cargo/: config.toml
stm32f3-c2s/src/: main.rs
