[package]
name = "stm32f3-c2s"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f3xx-hal = { version = "0.9", features = ["stm32f303xc"] }
panic-halt = "0.2" # Handles panics by halting the system

[profile.release]
codegen-units = 1
debug = true
lto = true